--- a/css/style.css
+++ b/css/style.css
@@ -9247,6 +9247,155 @@ h1, h2, h3, h4, h5,
   }
 }
 
+.hero-banner .slider-text {
+  height: 750px;
+  z-index: 0;
+}
+.hero-banner .slider-text.bg-gradient:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 10%;
+  right: 0%;
+  background: rgb(189, 134, 255);
+  background: radial-gradient(circle, #BD86FF 0%, #000000 31%, #000000 100%);
+  z-index: -2;
+  opacity: 0.6;
+}
+@media (max-width: 991.98px) {
+  .hero-banner .slider-text {
+    text-align: center;
+  }
+}
+.hero-banner .slider-text .one-third {
+  width: 50%;
+  position: relative;
+  background-size: 100%;
+  z-index: -1;
+}
+.hero-banner .slider-text .one-third .overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #000000;
+  opacity: 0;
+}
+@media (max-width: 1199.98px) {
+  .hero-banner .slider-text .one-third {
+    width: 50%;
+  }
+}
+@media (max-width: 991.98px) {
+  .hero-banner .slider-text .one-third {
+    width: 100%;
+    z-index: 0;
+    background-position: 0 0;
+  }
+  .hero-banner .slider-text .one-third .overlay {
+    opacity: 0.3;
+  }
+  .hero-banner .slider-text .one-third:after {
+    opacity: 0;
+  }
+}
+.hero-banner .slider-text .one-forth {
+  width: 50%;
+  position: relative;
+}
+@media (max-width: 991.98px) {
+  .hero-banner .slider-text .one-forth {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    padding: 1em;
+  }
+}
+.hero-banner .slider-text .one-forth .text {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .hero-banner .slider-text .one-forth .text {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    right: 0;
+    padding-left: 45px;
+    padding-right: 3em;
+  }
+}
+.hero-banner .slider-text .subheading {
+  color: #000000;
+  font-weight: 600;
+  font-size: 22px;
+  letter-spacing: 3px;
+  color: #BD86FF;
+  margin-bottom: 2rem;
+  display: block;
+}
+.hero-banner .slider-text .text {
+  position: relative;
+  z-index: 1;
+}
+.hero-banner .slider-text h1 {
+  font-size: 60px;
+  color: #fff;
+  line-height: 1.2;
+  font-weight: 800;
+}
+.hero-banner .slider-text h1 span {
+  font-weight: 800;
+  color: #BD86FF;
+  background: linear-gradient(270deg, #BD86FF 0%, #e6d1ff 75%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+@media (max-width: 991.98px) {
+  .hero-banner .slider-text h1 {
+    color: #fff;
+    font-size: 50px;
+  }
+}
+@media (max-width: 767.98px) {
+  .hero-banner .slider-text h1 {
+    font-size: 40px;
+  }
+}
+.hero-banner .slider-text h2 {
+  font-size: 30px;
+  font-weight: 400;
+}
+@media (max-width: 991.98px) {
+  .hero-banner .slider-text h2 {
+    color: #fff;
+  }
+}
+.hero-banner .slider-text p {
+  color: rgba(0, 0, 0, 0.8);
+  font-weight: 400;
+}
+@media (max-width: 991.98px) {
+  .hero-banner .slider-text p {
+    color: rgba(255, 255, 255, 0.7);
+    font-size: 23px;
+  }
+}
+.hero-banner .slider-text .btn-custom {
+  bordeR: 1px solid #BD86FF;
+  padding: 5px 20px;
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 3px;
+}
+
 .owl-carousel {
   position: relative;
 }
@@ -9360,10 +9509,6 @@ h1, h2, h3, h4, h5,
   .owl-carousel.home-slider .slider-item .slider-text .one-third {
     width: 100%;
     z-index: 0;
-    background-position: 10% -10%;
-    background-size: 105%;
-    position: relative;
-    top: -100px;
   }
   .owl-carousel.home-slider .slider-item .slider-text .one-third .overlay {
     opacity: 0.3;
@@ -10272,7 +10417,7 @@ textarea.form-control {
   right: 0;
 }
 .heading-section h2 {
-  font-size: 50px;
+  font-size: 4rem;
   font-weight: 700;
 }
 .heading-section h2 span {
